tests/fixtures/invalid/str_div_str.py
# Cannot divide Str and Str
x: float = "hello" / "hello"
